--- a/example/android/app/src/main/res/values/strings.xml
+++ b/example/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">AwesomeLibraryExample</string>
+    <string name="app_name">DriveKit RN Demo App</string>
 </resources>
